--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">coffeeBeans</string>
     <string name="run_ad">Run Ad</string>
     <string name="reward_yourself">Reward Yourself!</string>
+    <string name="reward">"Reward: "</string>
 </resources>
